Minor style fixes to align elements

--- a/css/style.css
+++ b/css/style.css
@@ -205,7 +205,7 @@ body {
 @media screen and (min-width: 1100px) {
 
   .content {
-    width: 1100px;
+    width: 1000px;
     margin: 1.5em auto 0 auto;
   }
 
